--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -295,8 +295,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for i in restaurants:\n",
-    "        if i"
+    "    for"
    ]
   },
   {
