--- a/index.ipynb
+++ b/index.ipynb
@@ -296,7 +296,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for i in restaurants:\n",
-    "        if i"
+    "        if i['is_closed'] == "
    ]
   },
   {
