Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,6 +295,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    open_restaurant_list\n",
     "    for i in restaurants:\n",
     "        if i['is_closed'] == False:"
    ]
