Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,9 +295,10 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open_restaurant_list\n",
+    "    open_restaurant_list = []\n",
     "    for i in restaurants:\n",
-    "        if i['is_closed'] == False:"
+    "        if i['is_closed'] == False:\n",
+    "            open_restaurant_list"
    ]
   },
   {
