Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -303,6 +303,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_restau"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
